2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/SocketPermission/argument.java:
	Check that unquoted IPv6 addresses with one-digit first
	components are not incorrectly flagged as errors.

2006-09-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JTable/getCellRect.java
	(test): Added new checks.

2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/InetAddress/security.java: New test.
	
2006-09-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/SizeSequence/getSize.java
	(test): Check indices out of bounds,
	* gnu/testlet/javax/swing/JTable/getRowHeight.java: New test,
	* gnu/testlet/javax/swing/JTable/setRowHeight.java: New test.

2006-09-22  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/TestSecurityManager.java:
	Compare permissions using equals() rather than implies().
	Provide a way for tests to specify that they need implies().
	* gnu/testlet/java/io/File/security.java:
	Use implies() comparisons for temp file tests.

2006-09-21  Casey Marshall  <csm@gnu.org>

	* gnu/testlet/java/nio/channels/Selector/testEmptySelect.java:
	new test.

2006-09-21  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JTable/getCellRect.java: Changed
	expected value of one test case.

2006-09-20  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/net/HttpURLConnection/TestHttpServer.java
	(ConnectionHandler.getHeaderFromList): New method.
	* gnu/testlet/java/net/HttpURLConnection/postHeaders.java: New test.

2006-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JButton/model.java: New test,
	* gnu/testlet/javax/swing/JButton/uidelegate.java: Likewise,
	* gnu/testlet/javax/swing/JCheckBox/model.java: Likewise,
	* gnu/testlet/javax/swing/JCheckBox/uidelegate.java: Likewise,
	* gnu/testlet/javax/swing/JCheckBoxMenuItem/model.java: Likewise,
	* gnu/testlet/javax/swing/JCheckBoxMenuItem/uidelegate.java: Likewise,